syntax = "proto3";

package grpc;

option go_package = "./protos";

service SendSmContextData {
  rpc SendSmContextCreateData (SmContextCreateDataRequest) returns (SmContextCreateDataResponse) {}
  rpc SendSmContextUpdateData (SmContextUpdateDataRequest) returns (SmContextUpdateDataResponse) {}
  rpc SendSmContextReleaseData (SmContextReleaseDataRequest) returns (SmContextReleaseDataResponse) {}
}

message SmContextCreateDataRequest {
  string smContextID =1;
  string n4reqType =2;  
  string UeContextID = 3;
}

message SmContextCreateDataResponse {
  string smContextID = 1;
  string status = 2;
  string UeContextID = 3;
}

message SmContextUpdateDataRequest {
  string smContextID = 1;
  string n4reqType = 2;
}

message SmContextUpdateDataResponse{
  string smContextID = 1;
  string status =2;
}



//message SmContextUpdateDataRequest {
//  string pei = 1;
//  string serving_nf_id = 2;
//  string sm_context_status_uri = 3;
//  Guami guami = 4;
//  PlmnId serving_network = 5; // PlmnId type DONE
//  int32 pdu_session_id = 6;
//  N2SmInformation n2_sm_info = 7;
//}

message N2SmInformation {
  PduSessionResourceSetupRequestTransfer pdu_session_resource_setup_request_transfer = 1;
}

message PduSessionResourceSetupRequestTransfer {
  string gtp_tunnel_endpoint_ip_address = 1;
  string gtp_teid = 2;
  string pdu_session_type = 3;
  int32 qfi = 4;
  QosFlowLevelQosParameters qos_flow_level_qos_parameters = 5;
}

message QosFlowLevelQosParameters {
  int32 fqi = 1;
  Arp arp = 2; 
  GbrQoSFlowInformation gbr_qos_flow_information = 3;
}

message Arp {
  string priority_level = 1;
  string preemption_capability = 2;
  string preemption_vulnerability = 3;
}

message GbrQoSFlowInformation {
  int32 maximum_flow_bitrate_downlink = 1;
  int32 maximum_flow_bitrate_uplink = 2;
  int32 guaranteed_flow_bitrate_downlink = 3;
  int32 guaranteed_flow_bitrate_uplink = 4;
}

//message SmContextUpdateDataResponse {
//  int32 pdu_session_id = 1;
//}

message Guami {
  PlmnId plmn_id = 1;
  string amf_id = 2;
}

message PlmnId {
  string mcc = 1;
  string mnc = 2;
}

message SmContextReleaseDataRequest {
  string pei = 1;
  string serving_nf_id = 2;
  string sm_context_status_uri = 3;
  Guami guami = 4;
  PlmnId serving_network = 5; // PlmnId type DONE
  int32 pdu_session_id = 6;
  int32 extended_protocal_discriminator = 7;
  int32 pti = 8;
  int32 pdu_session_release_request_message_identity = 9;
}

message SmContextReleaseDataResponse {
  int32 pdu_session_id = 1;
}